# mlocker

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rustfmt.toml
browser-extension/: README.md  background.js  content.js  manifest.json  styles.css
crates/mlocker-cli/: Cargo.toml
crates/mlocker-cli/src/: browser_host.rs  browser_host_main.rs  cli.rs  commands.rs  core_adapter.rs  importer.rs  inject.rs  lib.rs  main.rs  ssh_agent.rs  vault.rs
crates/mlocker-cli/tests/: cli.rs
crates/mlocker-core/: Cargo.toml
crates/mlocker-core/src/: derivation.rs  error.rs  keys.rs  lib.rs  mnemonic.rs  passkey.rs  password.rs  ssh.rs  sync.rs  totp.rs  vault.rs  wallet.rs
crates/mlocker-desktop/: Cargo.toml
crates/mlocker-desktop/src/: main.rs  model.rs
docs/: OS_INTEGRATION.md  PLAN.md
