[package]
name = "mlocker-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
default-run = "mlocker"

[[bin]]
name = "mlocker"
path = "src/main.rs"

[[bin]]
name = "mlocker-browser-host"
path = "src/browser_host_main.rs"

[dependencies]
anyhow = "1.0"
mlocker-core = { path = "../mlocker-core" }
clap = { version = "=4.5.31", features = ["derive", "env"] }
clap_complete = "=4.5.31"
hex = "=0.4.3"
rand = "=0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "=2.0.16"
predicates = "=3.1.2"
tempfile = "=3.10.1"
