[package]
name = "mlocker-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mlocker-desktop"
path = "src/main.rs"

[dependencies]
mlocker-core = { path = "../mlocker-core" }
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }
egui = { version = "0.29", default-features = false, features = ["default_fonts"] }
hex = "0.4"
sha2 = "0.10"
zeroize = { version = "1", features = ["derive"] }

[features]
default = ["core-integration"]
core-integration = []
